--- a/app/src/main/res/layout/about_info.xml
+++ b/app/src/main/res/layout/about_info.xml
@@ -9,20 +9,26 @@
     android:background="@color/light_pink">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
         android:orientation="vertical"
         android:layout_margin="20dp"
         android:paddingVertical="20dp">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:autoSizeMaxTextSize="70dp"
+            android:autoSizeMaxTextSize="70sp"
             android:maxLines="1"
             android:textColor="@color/black"
-            android:autoSizeMinTextSize="30dp"
+            android:autoSizeMinTextSize="30sp"
             android:autoSizeTextType="uniform"
             android:gravity="center"
             android:textStyle="bold"
@@ -32,11 +38,11 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:autoSizeMaxTextSize="50dp"
-            android:autoSizeMinTextSize="20dp"
+            android:autoSizeMaxTextSize="50sp"
+            android:autoSizeMinTextSize="20sp"
             android:autoSizeTextType="uniform"
             android:gravity="center"
             android:textStyle="normal"
@@ -46,11 +52,11 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:autoSizeMaxTextSize="40dp"
-            android:autoSizeMinTextSize="15dp"
+            android:autoSizeMaxTextSize="40sp"
+            android:autoSizeMinTextSize="15sp"
             android:autoSizeTextType="uniform"
             android:gravity="center"
             android:textStyle="italic"
