--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -48,8 +48,8 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:autoSizeMaxTextSize="80dp"
-        android:autoSizeMinTextSize="10dp"
+        android:autoSizeMaxTextSize="80sp"
+        android:autoSizeMinTextSize="10sp"
         android:autoSizeTextType="uniform"
         android:gravity="center"
 
@@ -84,7 +84,7 @@
         <LinearLayout
             android:id="@+id/simple"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_margin="5dp"
@@ -103,7 +103,7 @@
         <LinearLayout
             android:id="@+id/advanced"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal"
@@ -123,7 +123,7 @@
         <LinearLayout
             android:id="@+id/about"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_margin="5dp"
@@ -142,7 +142,7 @@
         <LinearLayout
             android:id="@+id/exit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal"
